Tue Oct 23 10:04:25 2001  Ossama Othman  <ossama@uci.edu>

	* tests/Proactor_Test.cpp:

	  Replaced uses of a static global lock with the
	  ACE_Static_Object_Lock singleton.

	  Fixed incorrect uses of the "%l" format specifier.  "%d" is the
	  expected format specifier.

	  (Acceptor):

	  Initialize the "sessions_" member in the base member initializer
	  list.  Corrects a problem where the session number initially
	  contained a "garbage" value.

Mon Oct 22 17:55:00 2001  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/Svc_Conf_l.cpp: Remove include of stdlib.h, fix g++/Solaris
	  build.

Mon Oct 22 15:54:29 2001  Steve Huston  <shuston@riverace.com>

        * ace/config-hpux-10.x-hpc++.h: Remove hard-coded setting of
          ACE_HAS_EXCEPTIONS. It is controlled by platform_hpux_aCC.GNU.

Mon Oct 22 15:50:35 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* THANKS: Added Chris Hughes name to the Hall of Fame

Sun Oct 21 16:44:41 2001  Ossama Othman  <ossama@uci.edu>

	* tests/Proactor_Test.cpp (disable_signal):

	  Fixed warnings regarding a method that "hid" virtual function
	  with the same name, in addition to unused argument warnings.

Sun Oct 21 15:22:57 2001  Ossama Othman  <ossama@uci.edu>

	* tests/Proactor_Test.cpp:

	  Fixed warning about deprecated conversion of "const char *" to
	  "char *" exhibited by GCC 3.0.x builds.

Sun Oct 21 12:50:39 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/LSOCK.cpp: The ACE_LSOCK::recv_handle() was returning success
	  without setting the I/O handle.  Thanks to Rick Ohnemus
 	  <rick.ohnemus@systemware.com> for reporting this.

	* ace/config-freebsd-pthread.h: Changed
          #if (__FreeBSD_version > 430000) to
	  #if (__FreeBSD_version > 440000) to get ACE to work with FreeBSD 4.4.
	  Thanks to Gu Song <gusong_m@yahoo.com> for reporting this.

Fri Oct 19 06:44:17 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* examples/Reactor/WFMO_Reactor/test_window_messages.cpp: