@@ -1,3 +1,8 @@
+Wed Oct 24 08:04:36 2001  Balachandran Natarajan  <bala@cs.wustl.edu>
+
+	* ace/Reactor.h: Improved the documentation of the
+	  end_reactor_event_loop (). 
+
 Tue Oct 23 10:04:25 2001  Ossama Othman  <ossama@uci.edu>
 
 	* tests/Proactor_Test.cpp:
